<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" >

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#313031"
                  android:orientation="horizontal"
                  android:layout_weight="1">

        <TextView android:id="@+id/input_textview_widget"
                  android:gravity="center"
                  android:layout_width="0dp"
                  android:textColor="@android:color/white"
                  android:scrollbarAlwaysDrawVerticalTrack="true"
                  android:textSize="@dimen/text_size"
                  android:layout_weight="4"
                  android:layout_height="match_parent"
                  android:enabled="false"/>
        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:text="@string/clear"
                android:textSize="@dimen/text_size"
                android:singleLine="true"
                android:id="@+id/clear_widget"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1">

        <Button android:text="@string/one"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/text_size"
                android:id="@+id/one_widget"/>
        <Button android:text="@string/two"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:id="@+id/two_widget"/>
        <Button android:text="@string/three"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:id="@+id/three_widget"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1">

        <Button android:text="@string/four"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:id="@+id/four_widget"/>
        <Button android:text="@string/five"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:id="@+id/five_widget"/>
        <Button android:text="@string/six"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:id="@+id/six_widget"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1">

        <Button android:text="@string/seven"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:id="@+id/seven_widget"/>
        <Button android:text="@string/eight"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:id="@+id/eight_widget"/>
        <Button android:text="@string/nine"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:id="@+id/nine_widget"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1">
        <Button android:text="@string/view"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:singleLine="true"
                android:id="@+id/view_widget"/>
        <Button android:text="@string/zero"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:id="@+id/zero_widget"/>
        <Button android:text="@string/save"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:singleLine="true"
                android:id="@+id/save_widget"/>
    </LinearLayout>


</LinearLayout>